# spauv

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
Misc/: spauv_installer  spauv_installer.sh
Scripts/: bucket_vision.py  bucket_vision.py~  controlui_3.py  histogram.py  qrangeslider.py  spauv_interface.py  spauv_interface.py~  vision_dynreconf.py
cfg/: Mission.cfg.txt  Mission.cfg~  PID.cfg.txt  PID.cfg~  beh.cfg~  bucket.cfg.txt  bucket.cfg~  pidserver.cfg~
launch/: spauv.launch  spauv.launch~
shellscripts/: controller.sh  controller.sh~  core.sh  core.sh~  gui.sh  gui.sh~
src/: spauv_controller.cpp  spauv_controller.cpp~  spauv_main.cpp  spauv_main.cpp~
